--- a/kaka_base_navigation_pkg/CMakeLists.txt
+++ b/kaka_base_navigation_pkg/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(kaka_base_camera_pkg)
+project(kaka_base_navigation_pkg)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -8,7 +8,10 @@ project(kaka_base_camera_pkg)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
+  move_base
+  roscpp
   rospy
+  std_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -68,7 +71,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate added messages and services with any dependencies listed here
 # generate_messages(
 #   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
+#   std_msgs
 # )
 
 ################################################
@@ -102,8 +105,8 @@ find_package(catkin REQUIRED COMPONENTS
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES kaka_base_camera_pkg
-#  CATKIN_DEPENDS rospy
+#  LIBRARIES kaka_base_navigation_pkg
+#  CATKIN_DEPENDS move_base roscpp rospy std_msgs
 #  DEPENDS system_lib
 )
 
@@ -120,7 +123,7 @@ include_directories(
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/kaka_base_camera_pkg.cpp
+#   src/${PROJECT_NAME}/kaka_base_navigation_pkg.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -131,7 +134,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/kaka_base_camera_pkg_node.cpp)
+# add_executable(${PROJECT_NAME}_node src/kaka_base_navigation_pkg_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -188,7 +191,7 @@ include_directories(
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_kaka_base_camera_pkg.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_kaka_base_navigation_pkg.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
